<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.learnlib</groupId>
    <artifactId>ralib</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>RALib</name>
    <description>RALib is a library for active learning algorithms for register automata.</description>
    <url>https://github.com/LearnLib/ralib</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>no-preserve-root</id>
            <name>Simon Dierl</name>
            <email>simon.dierl@tu-dortmund.de</email>
            <organization>TU Dortmund University, Dortmund, Germany</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>pfg666</id>
            <name>Paul Fiterau-Brostean</name>
            <email>fiteraup@yahoo.com</email>
            <organization>Uppsala University, Uppsala, Sweden</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>fhowar</id>
            <name>Falk Howar</name>
            <email>falk.howar@gmail.com</email>
            <organization>TU Dortmund University, Dortmund, Germany</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>kostis</id>
            <name>Kostis Sagonas</name>
            <email>kostis@it.uu.se</email>
            <organization>Uppsala University, Uppsala, Sweden</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>FredrikTaquist</id>
            <name>Fredrik Tåquist</name>
            <email>fredrik.takvist@it.uu.se</email>
            <organization>Uppsala University, Uppsala, Sweden</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Sofia Cassel</name>
            <organization>Uppsala University, Uppsala, Sweden</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </contributor>
        <contributor>
            <name>Malte Isberner</name>
            <email>malte.isberner@gmail.com</email>
            <organization>TU Dortmund University, Dortmund, Germany</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </contributor>
    </contributors>

    <scm>
        <connection>scm:git:https://github.com/LearnLib/ralib.git</connection>
        <developerConnection>scm:git:git@github.com:LearnLib/ralib.git</developerConnection>
        <url>https://github.com/LearnLib/ralib/tree/main</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>sonatype</id>
            <url>https://central.sonatype.com</url>
        </repository>
        <snapshotRepository>
            <id>sonatype</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>

        <!-- Dependency versions appear alphabetically below -->
        <checker-qual.version>3.52.1</checker-qual.version>
        <commons-lang.version>3.20.0</commons-lang.version>
        <gson.version>2.13.2</gson.version>
        <guava.version>33.5.0-jre</guava.version>
        <jakarta-xml.version>4.0.4</jakarta-xml.version>
        <jaxb-runtime.version>4.0.6</jaxb-runtime.version>
        <jconstraints.version>0.9.9</jconstraints.version>
        <learnlib.version>0.18.0</learnlib.version>

        <!-- Plugin versions in alphabetical order -->
        <assembly-plugin.version>3.8.0</assembly-plugin.version>
        <central-publish-plugin.version>0.9.0</central-publish-plugin.version>
        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <dependency-plugin.version>3.9.0</dependency-plugin.version>
        <deploy-plugin.version>3.1.3</deploy-plugin.version>
        <gpg-plugin.version>3.2.7</gpg-plugin.version>
        <javadoc-plugin.version>3.11.2</javadoc-plugin.version>
        <release-plugin.version>3.1.0</release-plugin.version>
        <source-plugin.version>3.3.1</source-plugin.version>
        <spotless-plugin.version>3.1.0</spotless-plugin.version>
        <spotbugs-plugin.version>4.9.8.2</spotbugs-plugin.version>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>${central-publish-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${deploy-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${gpg-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${javadoc-plugin.version}</version>
                    <configuration>
                        <quiet>true</quiet>
                        <detectLinks>true</detectLinks>
                        <linksource>false</linksource>
                        <additionalOptions>--enable-preview</additionalOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${release-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>ralib-@{version}</tagNameFormat>
                        <preparationGoals>verify</preparationGoals>
                        <releaseProfiles>bundles,release</releaseProfiles>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${source-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Dependency analysis -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <id>analyze-only</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                            <ignoreUnusedRuntime>true</ignoreUnusedRuntime>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Format the source code -->
            <plugin>
	        <groupId>com.diffplug.spotless</groupId>
	        <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-plugin.version}</version>
                <configuration>
		    <formats>
                        <format>
                            <includes>
                                <include>**/*.xml</include>
                            </includes>
                            <excludes>
                                <exclude>.idea/**/*.xml</exclude>
                                <exclude>target/**/*.xml</exclude>
                            </excludes>
                            <endWithNewline />
                            <trimTrailingWhitespace />
                        </format>
                    </formats>
		    <java>
		        <endWithNewline />
                        <formatAnnotations />
			<importOrder>
			    <order>java|jakarta,com,org,de|gov|net</order>
			</importOrder>
                        <!--<indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>-->
			<!--<palantirJavaFormat>
			    <version>2.27.0</version>
			</palantirJavaFormat>-->
			<removeUnusedImports />
                        <trimTrailingWhitespace />
		    </java>
		</configuration>
		<executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
	    </plugin>

            <!-- Compilation options -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                         <arg>-Xlint:deprecation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Static code analysis -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-plugin.version}</version>
                <configuration>
                    <threshold>High</threshold>
                    <includeFilterFile>.spotbugs/include.xml</includeFilterFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>

            <!-- Make a jar archive -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${assembly-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.learnlib.ralib.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- learnlib -->
            <dependency>
                <groupId>de.learnlib</groupId>
                <artifactId>learnlib-parent</artifactId>
                <version>${learnlib.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- jakarta-xml api -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta-xml.version}</version>
            </dependency>
            <!-- jaxb runtime -->
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb-runtime.version}</version>
	        <scope>runtime</scope>
            </dependency>
             <!-- checker framework -->
            <dependency>
                <groupId>org.checkerframework</groupId>
                <artifactId>checker-qual</artifactId>
                <version>${checker-qual.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-api</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-commons-util</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-core</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-api</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-util</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-core</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-z3</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <!-- enables building of javadoc and source JARs -->
            <id>bundles</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- set certain configurations when performing a release -->
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <deploymentName>RALib ${project.version}</deploymentName>
                            <publishingServerId>sonatype</publishingServerId>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
